2003-06-24  Andrew Lunn  <andrew.lunn@ascom.ch>

	* include/codes.h (ENOTEMPTY): Needed by the sysctl call in the
	freeBSD stack.

2001-11-29  Jonathan Larmour  <jlarmour@redhat.com>

	* include/errno.h: Don't use 'const' type qualifier any more. It
	gives warnings in new compilers now.
	* src/errno.cxx (cyg_error_get_errno_p): Ditto.

2000-06-19  Nick Garnett  <nickg@cygnus.co.uk>

	* include/errno.h (errno): Added extern modifier to non-per-thread
	instance of errno.

2000-06-07  Nick Garnett  <nickg@cygnus.co.uk>

	* src/strerror.cxx: 
	* include/codes.h: Added ESPIPE.

2000-06-02  Nick Garnett  <nickg@cygnus.co.uk>

	* include/codes.h:
	* src/strerror.cxx: Added some more codes.
	
2000-05-31  Nick Garnett  <nickg@cygnus.co.uk>

	* src/strerror.cxx: 
	* include/codes.h:  Added EXDEV.

2000-05-20  Jonathan Larmour  <jlarmour@redhat.co.uk>

	* include/codes.h: Add EDEADLOCK synonym for EDEADLK
	Add ENFILE
	* src/strerror.cxx: Add blurb for ENFILE, ENOSPC, EDEADLK and ENOTSUP

2000-05-02  Jonathan Larmour  <jlarmour@redhat.co.uk>

	* include/codes.h: No need to conditionalize codes on CYGPKG_NET
	Tidy a bit.
	* src/errno.cxx: Move here from libc. Use kernel constant
	per-thread data slot, not a dynamic one. Generally tidy.
	* src/strerror.cxx: No need to conditionalize codes on CYGPKG_NET.
	Tidy a bit.	

2000-03-31  Nick Garnett  <nickg@cygnus.co.uk>

	* include/codes.h: Added some further codes.

2000-01-11  Gary Thomas  <gthomas@cygnus.co.uk>

	* src/strerror.cxx (_strerror): 
	* include/codes.h: Add in additional errors require to support
	networking.

1999-04-14  John Dallaway  <jld@cygnus.co.uk>

	* include/pkgconf/error.h: Add cdl_package doc attribute.

1998-09-11  Bart Veer  <bartv@cygnus.co.uk>

	* include/pkgconf/error.h:
	Sorting out dependencies for error package.

Mon Aug 24 17:51:08 1998  Jonathan Larmour  <jlarmour@cygnus.co.uk>

	* include/pkgconf/error.h: 
	Add CDL for this package, for the configuration system.
